--- a/index.html
+++ b/index.html
@@ -1,13 +1,68 @@
+<!-- 
+  Documento HTML que es compilado por el servidor. 
+  @author Miguel Arturo Reina Rocabado
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Taller 1 Typescript</title>
+    <!-- Enlace Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Enlace .css propio -->
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Hola desde HTML</h1>
-    <script src="main.js"></script>
+
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">SeriesParaTi</a>
+  </nav>
+
+  <div class="row py-4">
+    <div class="col">
+      <h1 class="centrar">Mi taller de Typescript 1</h1>
+      <p class="centrar">
+        Realizado por: Miguel Arturo Reina Rocabado - 202014739
+      </p>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-6">
+      <table class="table table-bordered table-hover">
+        <thead class="thead-dark">
+          <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Channel</th>
+            <th>Seasons</th>
+          </tr>
+        </thead>
+        <!-- Incursión de las filas por .ts por id -->
+        <tbody id="series">
+        </tbody>
+      </table>
+    </div class="col-1"></div>
+  </div>
+
+  <!-- Promedio temporadas -->
+  <div class="row">
+    <div class="col-2"></div>
+    <div class="row justify-content-end">
+      <p><strong>Promedio temporadas: &nbsp; </strong></p>
+      <p id="promedio-temporadas"><strong> </strong></p>
+    </div>
+    
+  
+  </div>
+  <!-- Enlace con scripts de .ts -->
+  <script type="module" src="./scripts/serie.js" ></script>
+  <script type="module" src="./scripts/main.js" ></script>
+  <script type="module" src="./scripts/data.js"></script>
+  
 </body>
 </html>
