--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
   </div>
   
   <div class="row">
-    <div class="col-1"></div>
-    <div class="col-6">
+    <div class="col-sm-1">
+    </div>
+    <div class="col-sm-6">
       <table class="table table-bordered table-hover">
         <thead class="thead-dark">
           <tr>
@@ -46,19 +47,20 @@
         <tbody id="series">
         </tbody>
       </table>
-    </div class="col-1"></div>
+      <div class="row justify-content-end">
+        <p><strong>Promedio temporadas: &nbsp; </strong></p>
+        <p id="promedio-temporadas"><strong> </strong></p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="card" id="carta-series" style="width: 18rem;">
+        <!-- TypeScript content -->
+      </div>
+    </div>
   </div>
 
-  <!-- Promedio temporadas -->
-  <div class="row">
-    <div class="col-2"></div>
-    <div class="row justify-content-end">
-      <p><strong>Promedio temporadas: &nbsp; </strong></p>
-      <p id="promedio-temporadas"><strong> </strong></p>
-    </div>
-    
-  
-  </div>
+
+ 
   <!-- Enlace con scripts de .ts -->
   <script type="module" src="./scripts/serie.js" ></script>
   <script type="module" src="./scripts/main.js" ></script>
